--- a/on-boarding/product-8/ecommerce_app/pubspec.yaml
+++ b/on-boarding/product-8/ecommerce_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   http: ^1.2.2
   internet_connection_checker: ^1.0.0+1
+  shared_preferences: ^2.3.1
 
 dev_dependencies:
   flutter_test:
