--- a/on-boarding/product-8/ecommerce_app/pubspec.yaml
+++ b/on-boarding/product-8/ecommerce_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.2.2
   internet_connection_checker: ^1.0.0+1
   shared_preferences: ^2.3.1
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
