--- a/on-boarding/product-8/ecommerce_app/pubspec.yaml
+++ b/on-boarding/product-8/ecommerce_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   shared_preferences: ^2.3.1
   get_it: ^7.7.0
+  bloc_test: ^9.1.7
 
 dev_dependencies:
   flutter_test:
