--- a/on-boarding/product-8/ecommerce_app/pubspec.yaml
+++ b/on-boarding/product-8/ecommerce_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.3.1
   get_it: ^7.7.0
   bloc_test: ^9.1.7
+  hexcolor: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -69,9 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
