--- a/on-boarding/product-8/ecommerce_app/pubspec.yaml
+++ b/on-boarding/product-8/ecommerce_app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get_it: ^7.7.0
   bloc_test: ^9.1.7
   hexcolor: ^3.0.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
