--- a/on-boarding/product-8/ecommerce_app/pubspec.yaml
+++ b/on-boarding/product-8/ecommerce_app/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   bloc_test: ^9.1.7
   hexcolor: ^3.0.1
   image_picker: ^1.1.2
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
